# slam_ws

./: README.md
emily/src/core/: connect_code_cu.py  connect_code_cu_backup.py  huong_dan.txt  lidar_data.csv  lidar_matplotlib.py  lidar_test_pi.py  lidar_test_pi_.py  requirements.txt  run.py  test_port.py  test_port1.py
emily/src/service_logic/: PyQt_builder-1.18.1-py3-none-any.whl  byduck.py  main.py  requirements.txt  screensaver_manager.py
emily/src/service_logic/assets/: eye_animation.json
emily/src/service_logic/scenes/: __init__.py  camera_scene.py  control_device_scene.py  main_scene.py  settings_scene.py  settings_scene_.py  test_camera.py  updating_scene.py
emily/src/service_logic/utils/: location.py  traffic.py  weather.py
slam_ws/: frames_2025-05-29_10.55.26.gv  mecanum_robot_encoder.ino  mecanum_robot_no_encoder.ino
slam_ws/install/: local_setup.sh  setup.sh
slam_ws/install/my_slam_package/lib/my_slam_package/: vel_to_serial.py
slam_ws/install/my_slam_package/share/my_slam_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
slam_ws/install/my_slam_package/share/my_slam_package/config/: slam_params.yaml
slam_ws/install/my_slam_package/share/my_slam_package/launch/: navigation.launch.py
slam_ws/install/my_slam_package/share/my_slam_package/rviz/: slam.rviz
slam_ws/install/my_slam_package/share/my_slam_package/scripts/: odom_publisher.py
slam_ws/install/my_slam_package/share/my_slam_package/urdf/: robot.urdf
slam_ws/log/: latest_build
slam_ws/src/my_slam_package/: CMakeLists.txt
slam_ws/src/my_slam_package/config/: lidar.yaml  nav2_params
slam_ws/src/my_slam_package/launch/: slam.launch.py
slam_ws/src/my_slam_package/maps/: map.pgm  map.yaml
slam_ws/src/my_slam_package/scripts/: waypoint_navigator.py
(+3 files in other folders)
