<?xml version="1.0"?>
<package format="3">
  <name>my_slam_package</name>
  <version>0.0.0</version>
  <description>SLAM package using RPLIDAR and slam_toolbox</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rplidar_ros</depend>
   
  <exec_depend>python3-serial</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
